--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "src",
     "out"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Abhisheksharma01/BattleShip.git"
+  },
   "keywords": [
    "battleship"
   ],
